# RUST-FRDM-KL25Z

./: .gitignore  Cargo.toml  README.md  Xargo.toml
demo/: .gitignore  Cargo.toml  build.rs  compile.sh  device.x
demo/src/: controller.rs  main.rs  serial_state_machine.rs
es670/: Cargo.toml  memory.x
es670/src/: display.rs  es670.rs  led.rs  lib.rs  switch.rs
es670_board/: Cargo.toml  compile.sh
es670_board/src/: fan.rs  heater.rs  lcd.rs  led.rs  lib.rs  tachometer.rs
frdm-kl25z/: Cargo.toml  Xargo.toml  dump.txt  dump_1.txt  dump_20.txt  dump_200.txt  useful_commands.txt
frdm-kl25z/src/: adc.rs  io.rs  lib.rs  lptm_0.rs  multi_purpose_clock_generator.rs  nvic.rs  osc.rs  smc.rs  tpm.rs
frdm-kl25z/src/system_integration_module/: gpio.rs  mod.rs  port.rs
frdm-kl25z/src/uart_0/: mod.rs
lab01/: .gdbinit  Cargo.toml  compile.sh  memory.x
lab01/.cargo/: config
lab01/src/: main.rs
lab_es670/: Cargo.toml
lab_es670/src/: main.rs
src/: frdm_kl25z.rs  gpio.rs  main.rs  port.rs  system_integration_module.rs
