[package]
authors = ["Tiberio Ferreira <tiberiusferreira@gmail.com>"]
categories = ["embedded", "no-std"]
description = "Support crate for the FRDM-KL25Z"
keywords = ["arm", "cortex-m", "FRDM-KL25Z", "KL25Z"]
license = "MIT OR Apache-2.0"
name = "frdm_kl25z"
repository = "https://github.com/tiberiusferreira/RUST-FRDM-KL25Z"
version = "0.0.1"

[dependencies]
cortex-m = "*"
cortex-m-semihosting = "*"
# alloc-cortex-m release doesn't use linked_list_allocator v0.5.0 yet.
# Uncomment for the allocator example.
#alloc-cortex-m = "0.3.2"

[dependencies.cortex-m-rt]
version = "*"
# Comment for the panic example.
#features = ["abort-on-panic"]

# Uncomment for the device example.
# [dependencies.stm32f103xx]
# features = ["rt"]
# version = "0.8.0"

# disable both incremental compilation and parallel codegen to reduce the chances of running into
# rust-lang/rust#47074
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
incremental = false
debug = false
lto = true
