[package]
build = "build.rs"
name = "lab01"
version = "0.1.0"
authors = ["Tiberio D A R Ferreira <tiberiusferreira@gmail.com>"]


[dependencies]
es670 = { path = "../es670" }
cortex-m = "0.4.0"
cortex-m-semihosting = "0.2.0"
# alloc-cortex-m release doesn't use linked_list_allocator v0.5.0 yet.
# Uncomment for the allocator example.
#alloc-cortex-m = "0.3.2"

[dependencies.cortex-m-rt]
version = "0.3.12"
# Comment for the panic example.
features = ["abort-on-panic"]

# Uncomment for the device example.
# [dependencies.stm32f103xx]
# features = ["rt"]
# version = "0.8.0"

# disable both incremental compilation and parallel codegen to reduce the chances of running into
# rust-lang/rust#47074
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
incremental = false
debug = false
lto = false
